# sukless-chess

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  vcpkg.json
app/chess/: CMakeLists.txt
lib/: CMakeLists.txt
test/: CMakeLists.txt  test_Piece.cpp
